# NumMKL

./: .clang-format  CMakeLists.txt  README.md
src/: avx_utils.hpp  basic_test.cpp  cpp_utils.hpp  lu.hpp  matrix_core.hpp  matrix_linalg.hpp  matrix_operators.hpp  matrix_random.hpp  matrix_utils.hpp  num_mkl.hpp
